--- a/src/App.css
+++ b/src/App.css
@@ -290,11 +290,11 @@ footer .container {
 footer a {
   color: #f4ebf0;
   text-decoration: none;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   margin-right: 1.2rem;
   margin-left: 1.5rem;
   padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+  /* padding-bottom: 0.5rem; */
   padding-left: 0.2rem;
 
   /* add hover */
@@ -320,6 +320,11 @@ a:hover {
   background-color: rgb(112, 226, 152);
   color: #1d003b;
 }
+.license-link:hover {
+  background-color: rgb(103, 176, 245);
+  /* color: #1d003b; */
+}
+
 .get-fake-eth:hover {
   background-color: rgb(239, 185, 84);
   color: #1d003b;
