--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,16 @@ h2 {
   margin: 0 auto;
   padding: 0 2rem;
 }
+.after-connect {
+  background-color: black;
+}
+.express-yourself {
+  background-color: #282c34;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
 .navbar {
   color: #fff;
