--- a/src/App.css
+++ b/src/App.css
@@ -47,11 +47,27 @@ h2 {
   justify-content: center;
   align-items: center;
 }
+.morpheus {
+  /* padding: 1.2rem; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.change-the-world {
+  padding: 1.2rem;
+  background-color: #7098e9;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
-.centered
-{
-  align-self: center;
-  text-align: center;
+.centered {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .navbar {
   color: #fff;
