--- a/src/App.css
+++ b/src/App.css
@@ -97,10 +97,12 @@ h2 {
   margin: 0.5rem;
 
 }
+
+
 .dapp-button {
   background: #020202;
   color: white;
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   font-weight: bold;
   /* padding-right: "12px"; */
   padding: 20px;
@@ -112,6 +114,9 @@ h2 {
   cursor: pointer;
   width: 10rem;
   height: 10rem;
+}
+a {
+  text-decoration: inherit;
 }
 
 .navbar .logo {
@@ -140,6 +145,39 @@ h2 {
   font-size: 1.6rem;
   font-weight: bold;
   border: 1px solid black;
+  border: 10px solid rgb(0, 255, 238);
+
+  /* padding: 0.3rem 0.5rem; */
+  border-radius: 0.8rem;
+  cursor: pointer;
+  width: 12rem;
+  height: 5.2rem;
+}
+
+.read-guide-button {
+  background: #020202;
+  color: white;
+  font-size: 1.6rem;
+  font-weight: bold;
+  margin-right: 2rem;
+  border: 1px solid black;
+  border: 10px solid rgb(0, 0, 0);
+
+  /* padding: 0.3rem 0.5rem; */
+  border-radius: 0.8rem;
+  cursor: pointer;
+  width: 12rem;
+  height: 5.2rem;
+}
+
+.watch-demo-button {
+  background: #020202;
+  color: white;
+  font-size: 1.6rem;
+  font-weight: bold;
+  border: 1px solid black;
+  border: 10px solid rgb(255, 23, 23);
+
   /* padding: 0.3rem 0.5rem; */
   border-radius: 0.8rem;
   cursor: pointer;
