--- a/src/App.css
+++ b/src/App.css
@@ -385,10 +385,13 @@ textarea {
 .new-expression-card textarea {
   font-size: 1.4rem;
 }
+
 .new-expression-card textarea::placeholder {
-  font-size: 2.6rem;
-  /* text-align: center; */
+  font-size: 2.2rem;
+  text-align: center;
+  padding-top: 2rem;
 }
+
 
 .new-expression-card .sign-button button {
   background: #2073e5;
